Construct inference algorithm
Signed-off-by: thirdsgames <thirdsgames2018@gmail.com>

--- a/spec/refs.bib
+++ b/spec/refs.bib
@@ -63,3 +63,10 @@
   pages   = {1-20},
   doi     = {10.1109/IEEESTD.1985.82928}
 }
+
+@TECHREPORT{Heeren02generalizinghindley-milner,
+  author = {Bastiaan Heeren and Bastiaan Heeren and Jurriaan Hage and Jurriaan Hage and Doaitse Swierstra and Doaitse Swierstra},
+  title = {Generalizing Hindley-Milner Type Inference Algorithms},
+  institution = {},
+  year = {2002}
+}
